fix some layout problems on the campaigns listing page

--- a/themes/test_theme/stylesheets/application.css
+++ b/themes/test_theme/stylesheets/application.css
@@ -363,12 +363,12 @@ h1#body_content_title {
 }
 
 /* line 1, sass/_campaigns.scss */
-.campaigns {
+#campaigns {
   overflow: hidden;
   margin-bottom: 15px;
 }
 /* line 5, sass/_campaigns.scss */
-.campaigns .campaign {
+#campaigns .campaign {
   margin-bottom: 30px;
   width: 200px;
   height: 95px;
@@ -388,33 +388,37 @@ h1#body_content_title {
   border-radius: 5px;
 }
 /* line 19, sass/_campaigns.scss */
-.campaigns .campaign .name {
+#campaigns .campaign p {
+  margin: 0px;
+}
+/* line 23, sass/_campaigns.scss */
+#campaigns .campaign .name {
   font-size: 14px;
   font-weight: bold;
   margin-bottom: .5em;
 }
-/* line 24, sass/_campaigns.scss */
-.campaigns .campaign .name a {
+/* line 28, sass/_campaigns.scss */
+#campaigns .campaign .name a {
   text-decoration: none;
   color: inherit;
 }
-/* line 30, sass/_campaigns.scss */
-.campaigns .campaign .target-level span {
+/* line 34, sass/_campaigns.scss */
+#campaigns .campaign .target-level span {
   color: #95c659;
 }
-/* line 34, sass/_campaigns.scss */
-.campaigns .campaign img {
+/* line 38, sass/_campaigns.scss */
+#campaigns .campaign img {
   float: left;
   margin-right: 15px;
 }
-/* line 39, sass/_campaigns.scss */
-.campaigns .campaign .view-link {
+/* line 43, sass/_campaigns.scss */
+#campaigns .campaign .view-link {
   float: right;
   font-weight: bold;
-  margin-top: 1em;
+  margin-top: .5em;
 }
-/* line 44, sass/_campaigns.scss */
-.campaigns .campaign .view-link a {
+/* line 48, sass/_campaigns.scss */
+#campaigns .campaign .view-link a {
   text-decoration: none;
   color: inherit;
 }
